--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@unocss/preset-uno": "^0.48.4",
     "@vueuse/core": "^9.10.0",
     "codemirror": "5.65.2",
+    "css": "^3.0.0",
     "prettier": "^2.8.3",
     "splitpanes": "^3.1.5",
     "unocss": "^0.48.4",
